bug fixes to list item font sizes and spacing in backend without containers

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -1,5 +1,5 @@
 /****************************************************************************************/
-/* Page Setup */
+/* C9 Page Setup */
 /****************************************************************************************/
 :root {
 	font-size: 62.5%;
@@ -437,11 +437,6 @@ pre,
 		font-size: 3em;
 	}
 
-	.entry-content p,
-	.page-content p {
-		line-height: 1.8;
-		font-size: 1.6em;
-	}
 }
 
 /****************************************************************************************/
@@ -2295,27 +2290,19 @@ table tr th {
 /****************************************************************************************/
 /* WordPress Gutenberg ol ul li + Core Gallery Blocks (Ordered and unordered lists) */
 /****************************************************************************************/
-.entry-content ol,
-.entry-content ul {
-	font-size: 10px;
-}
-
 .entry-content ul>li,
 .entry-content ol>li {
 	font-size: 1.6em;
 }
 
-.entry-content ul:not(.blocks-gallery-grid):not(.wp-block-gallery):not(.wc-block-grid__products):not(.gfield_checkbox):not(.gfield_radio):not(.nav-tabs):not(.c9-share-list):not(.products):not(.gform_fields),
-.editor-styles-wrapper ul:not(.blocks-gallery-grid):not(.wp-block-gallery):not(.wc-block-grid__products):not(.gfield_checkbox):not(.gfield_radio):not(.nav-tabs):not(.c9-share-list):not(.products):not(.gform_fields) {
+.entry-content ul:not(.blocks-gallery-grid):not(.wp-block-gallery):not(.wc-block-grid__products):not(.gfield_checkbox):not(.gfield_radio):not(.nav-tabs):not(.c9-share-list):not(.products):not(.gform_fields) {
 	padding: 0px 0px 0px 30px;
 	margin: 30px 0px 30px 15px;
 }
 
-.entry-content ol,
-.editor-styles-wrapper ol,
-.editor-styles-wrapper .is-root-container ol[data-block] {
+.entry-content>ol {
 	list-style-type: none;
-	padding-left: 20px;
+	padding-left: 30px;
 	padding-right: 0px;
 	margin: 30px 0px 30px 15px;
 }
